# ARBuilder

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: deploy-staging.yml  refresh-rag.yml  release-chunks.yml
apps/web/: cloudflare-env.d.ts  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
apps/web/migrations/: 0001_initial_schema.sql  0002_otp_codes.sql  0003_refresh_tokens.sql
apps/web/src/: auth.ts
data/processed/: processing_stats_20251220_200843.json
data/raw/: scraped_data_20251220_184232.json
data/raw/markdown/: arbitrum_io_stylus.md  blog_arbitrum_io_how-thirdweb-uses-arbitrum-stylus-to-power-the-next-wave-of-onchain-apps_.md  docs_arbitrum_io_build-decentralized-apps_01-overview.md  docs_arbitrum_io_for-devs_quickstart-solidity-hardhat.md  docs_arbitrum_io_stylus_how-tos_local-stylus-dev.md  docs_arbitrum_io_stylus_how-tos_write-stylus-contracts.md  docs_arbitrum_io_stylus_reference_stylus-sdk.md  docs_arbitrum_io_stylus_stylus-overview.md  docs_arbitrum_io_welcome_get-started.md  docs_superposition_so_.md  docs_superposition_so_introduction.md  docs_superposition_so_introduction_introducing-superposition.md  docs_superposition_so_introduction_roadmaps.md  docs_superposition_so_introduction_the-laws-of-superposition.md  docs_superposition_so_introduction_understanding-superposition.md  docs_superposition_so_native-dapps_9lives.md  docs_superposition_so_native-dapps_block-explorer.md  docs_superposition_so_native-dapps_bridge.md  docs_superposition_so_native-dapps_faucet.md  docs_superposition_so_native-dapps_longtail-amm.md  (+53 more)
data/raw/repos/hummusonrails_fortune-generator/fortune-contract/: Cargo.toml
data/raw/repos/hummusonrails_fortune-generator/fortune-contract/src/: lib.rs  main.rs
data/raw/repos/stylus-developers-guild_reentrancy-transient-storage/: Cargo.toml  Makefile  contract-1.wasm  contract-2.wasm  deploy-solidity.rc  deploy-stylus.rc  deploy.sh  stylus-reentrant.wasm
data/raw/repos/stylus-developers-guild_reentrancy-transient-storage/.cargo/: config.toml
data/raw/repos/stylus-developers-guild_reentrancy-transient-storage/cache/: solidity-files-cache.json
data/raw/repos/stylus-developers-guild_reentrancy-transient-storage/src/: Counter.sol  Proxy.sol  lib.rs
docs/: M3_IMPLEMENTATION_PLAN.md  mcp_tools_spec.md  sample_outputs.json
scraper/: __init__.py  config.py  github_scraper.py  run.py  scraper.py  version_extractor.py
scripts/: diff-migrate.ts  download-chunks.ts  ingest_m3.py  migrate-to-vectorize.ts  retry-failed.ts  run_benchmarks.py  validate-rag-quality.ts
src/: __init__.py
src/embeddings/: __init__.py  advanced_retrieval.py  embedder.py  export_embeddings.py  load_prebuilt.py  query_rewriter.py  reranker.py  vectordb.py
src/mcp/: server.py
src/preprocessing/: __init__.py  chunker.py  cleaner.py  processor.py  semantic_chunker.py
src/rag/: __init__.py  cli.py  registry.py
tests/: __init__.py  benchmark_results.json  conftest.py  test_queries.py  test_reranking.py  test_retrieval.py
tests/mcp_tools/: __init__.py  benchmark.py  conftest.py  test_ask_bridging.py  test_ask_stylus.py  test_generate_backend.py  test_generate_bridge_code.py  test_generate_dapp.py  test_generate_frontend.py  test_generate_indexer.py  test_generate_messaging_code.py  test_generate_stylus_code.py  test_generate_tests.py  test_get_stylus_context.py  test_get_workflow.py  test_m2_e2e.py  test_mcp_e2e.py
(+94 files in other folders)
