[package]
name = "stylus-reentrant"
version = "0.1.11"
edition = "2024"
license = "MIT"
homepage = "https://github.com/stylus-developers-guild/reentrancy-example"
repository = "https://github.com/stylus-developers-guild/reentrancy-example"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "rust"]
description = "Reentrancy example with TSTORE and Stylus"

[dependencies]
alloy-primitives = { version = "=0.8.20", features = ["native-keccak"] }
stylus-sdk = { version = "0.9.0", features = ["reentrant"] }
alloy-sol-types = "=0.8.20"

[dev-dependencies]
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
contract-1 = []
contract-2 = []

[[bin]]
name = "stylus-reentrant"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
