[package]
name = "stylus-mint-fortune"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hummusonrails/fortune-generator/"
repository = "https://github.com/hummusonrails/fortune-generator/"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus example with fortune cookie generator"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
mini-alloc = "0.4.2"
stylus-sdk = "0.8.0"
hex = "0.4.3"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-fortune-cookie"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
